--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="main">
         <div class="title" data-text="С Днём Рождения!">С Днём Рождения!</div>
+        <!-- <div class="title" data-text="ongrutulate Happy Сhristmas!!">Congrutulate Happy Сhristmas!</div> -->
         <div class="main_content">
             <div class="picture_wrapper">
                 <img src="sea.jpg" alt="">
