--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- TODO: 1)End music player 2)Second and third block 3)Insert video in footer-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,158 +6,225 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/first_screen.css">
+    <link rel="stylesheet" href="styles/snow.css">
+    <link rel="stylesheet" href="styles/lightrope.css">
+    <link rel="stylesheet" href="styles/responsive.css">
+    <script src="scripts/start_music.js"></script>
+    <title>Gallery</title>
 </head>
 
 <body>
-    <div class="main">
-        <div class="title" data-text="С Днём Рождения!">С Днём Рождения!</div>
-        <!-- <div class="title" data-text="ongrutulate Happy Сhristmas!!">Congrutulate Happy Сhristmas!</div> -->
+
+    <!-- Long list fot lightrope -->
+    <ul class="lightrope">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+
+
+    <div class="main" onclick="playAudio()">
+        <div class="title" data-text="С Днём Рождения!" id="tittle_text">С Днём Рождения!</div>
+
         <div class="main_content">
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
             <div class="picture_wrapper">
-                <img src="sea.jpg" alt="">
+                <img src="img/sea.jpg" alt="">
             </div>
-
+            <div class="picture_wrapper">
+                <img src="img/sea.jpg" alt="">
+            </div>
+            <div class="picture_wrapper">
+                <img src="img/sea.jpg" alt="">
+            </div>
+            <div class="picture_wrapper">
+                <img src="img/sea.jpg" alt="">
+            </div>
+            <div class="picture_wrapper">
+                <img src="img/sea.jpg" alt="">
+            </div>
+            <div class="picture_wrapper">
+                <img src="img/sea.jpg" alt="">
+            </div>
         </div>
         <div class="snow"></div>
     </div>
-    <!-- My code -->
+
+    <!-- Second block -->
     <div class="block"></div>
 </body>
 
